# sprint-sync

./: .env  .pre-commit-config.yaml  JWT_AUTH_GUIDE.md  Makefile  PASSWORD_VERIFICATION_GUIDE.md  README.md  WORKFLOW_SYSTEM.md  alembic.ini  docker-compose.yml  pyproject.toml  workflow_example.py
alembic/: env.py
alembic/versions/: 0f6e6bca1b6c_inital_migration.py  1c96c93b699a_add_new_column_to_user_table.py  fd50922d6b1f_add_task_workflow_system_with_custom_.py
app/: main.py
app/controller/: auth.py
app/db/: entities.py  session.py
app/middleware/: authorization.py  logging.py
app/models/: ai.py  auth.py  tasks.py  users.py  workflow.py
app/repository/: auth.py
app/routes/: auth.py  test.py
app/utils/: auth_utils.py  config.py  decorator.py  logging.py  password.py  simple_logging.py
